css/styles.css
/***FONT SIZING***
http://type-scale.com/?size=16&scale=1.125&text=A%20Visual%20Type%20Scale&webfont=%27PT+Sans%27&font-family=%27PT%20Sans%27,%20sans-serif&font-weight=400&font-family-headers=&font-weight-headers=inherit&background-color=white&font-color=
***/

* {
  box-sizing: border-box;
}

body {
  /* font-family: 'PT Serif', Georgia, Palatino, 'Palatino Linotype', serif; */
  font-family: 'PT Sans', Tahoma, Verdana, 'Trebuchet MS', sans-serif;

  font-size: 1em; /*16px*/
  line-height: 1.5;
  color: #5E5E5E;
  background-color: #f5f5f5;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'PT Sans', Tahoma, Verdana, 'Trebuchet MS', sans-serif;
  color: #4A4A4A;
  margin: 0;
}

h1 {
  padding: 1em 0 1em;
  font-size: 1.602em;
  line-height: 1.1;
}

h2 {
  font-size: 1em;
  line-height: 1.4;
}

h3 {
  font-size: 1.266em;
  line-height: 1.3;
}

header {
  padding-bottom: 2.5em;
}

img {
  max-width: 100%;
}

.container {
  width: 90%;
  margin: 0 auto;
}

nav {
  margin-bottom: 2.5em;
}

nav ul {
  margin: 0;
  padding: 0;
}

nav ul li {
  list-style: none;
  background-color: #fefefe;
  margin-bottom: 0.3em;
}

nav ul li a {
  display: block;
  font-family: 'PT Sans', Tahoma, Verdana, 'Trebuchet MS', sans-serif;
  font-weight: 700;
  text-transform: uppercase;
  color: #4A4A4A;
  text-decoration: none;
  padding: 0.5em;
  transition: all 0.2s;
}

nav ul li a:hover {
  background-color: #4A4A4A;
  color: #FAFAFA;
}

.banner {
  width: 88%;
  margin: 0 auto;
}

.profile-pic {
  margin: 0;
  max-width: 80%;
}

main {
  background-color: #FAFAFA;
  padding-bottom: 1.5em;
}

#portfolio {
  padding-top: 3em;
}

#portfolio h2,
#contact h2 {
  text-transform: uppercase;
  padding-bottom: 3em;
  letter-spacing: .01em;
}

.project {
  margin-bottom: 1.5em;
}

.project img {
  margin-bottom: 1.5em;
}

.project p {
  margin-top: 0.5em;
  margin-bottom: 2.3em;
}

footer {
  margin-top: 4em;
}

#contact {
  margin: 0 1em 4em;
}

#contact h2 {
  padding-bottom: 1em;
}

address {
  font-style: normal;
}

address span {
  font-weight: 700;
  padding-left: 0.5em;
}

address span a {
  text-decoration: none;
  color: inherit;
}

address span a:hover {
  border-bottom: 2px solid #626F7E;
  color: #626F7E;
}

.credit {
  border-top: 1px solid #DCDCDC;
  width: 95%;
  margin: 0 auto;
  padding: 1em 1em;
  font-size: 0.889em;
  font-weight: 700;
  font-family: 'PT Sans', Tahoma, Verdana, 'Trebuchet MS', sans-serif;
}

.credit p {
  float: left;
}

.credit p + p {
  float: right;
  text-transform: uppercase;
}

.credit p a {
  text-decoration: none;
  color: inherit;
  padding: 0.5em;
  transition: all 0.2s;
}

.credit p a:hover {
  background-color: #5E5E5E;
  color: #FAFAFA;
}

.footer-nav {
  display: none;
}

.clearfix {
  content: " ";
  display: table;
  clear: both;
}

/*************
MEDIA QUERIES
*************/

/*** TABLET STYLES ***/
@media (min-width: 768px) {

  nav ul {
    display: inline-block;
    margin: 0 auto;
  }

  nav ul li {
    float: left;
    background-color: transparent;
  }

  nav ul li a {
    display: inline-block;
    padding: 1em 1.5em;
  }

  .profile-pic {
    float: right;
    width: 33%;
  }

  .banner {
    width: 100%;
  }

  .intro {
    float: left;
    width: 67%;
    margin-top: 0;
    padding: 0 1em;
    font-size: 1.125em;
    text-align: left;
  }

  .project {
    float: left;
    width: 50%;
    padding: 0.5em;
  }

  #contact {
    width: 75%;
    margin: 0 auto;
  }

  #contact p {
    font-size: 1.266em;
  }

  .credit p a {
    display: none;
  }

  footer {
    padding-bottom: 2em;
  }

  .footer-nav {
    display: block;
    text-align: right;
  }

}

